--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -34,9 +34,18 @@ img {
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
-  width: 1200px;
+  /* width: 1200px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
+}
+
+.container {
+  text-align: center;
+  padding: 0 15px;
+}
+
+h2 {
+  font-size: 42px;
 }
 
 /*
@@ -79,8 +88,8 @@ img {
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
+  background-image: url('../svg/icons8-search.svg');
+  background-size: 80%;
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.6;
@@ -141,6 +150,7 @@ img {
  * Стили компонента ImageGalleryItem
  */
 .ImageGalleryItem {
+  min-width: 280px;
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -148,7 +158,7 @@ img {
 
 .ImageGalleryItem-image {
   width: 100%;
-  height: 260px;
+  height: 100%;
   object-fit: cover;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
