--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,6 +46,7 @@ img {
 
 h2 {
   font-size: 42px;
+  font-style: italic;
 }
 
 /*
@@ -151,16 +152,19 @@ h2 {
  */
 .ImageGalleryItem {
   min-width: 280px;
-  border-radius: 2px;
+  border-radius: 4px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .ImageGalleryItem-image {
+  border-radius: 4px;
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .ImageGalleryItem-image:hover {
