--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -34,14 +34,16 @@ img {
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
-  /* width: 1200px;
-  margin-left: auto;
-  margin-right: auto; */
 }
 
 .container {
   text-align: center;
   padding: 0 15px;
+  min-height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #303f9f;
 }
 
 h2 {
