--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,6 +46,11 @@ img {
   color: #303f9f;
 }
 
+.container-btn {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 h2 {
   font-size: 42px;
   font-style: italic;
@@ -200,6 +205,7 @@ h2 {
 * Стили компонента Buton (Load more)
 */
 .Button {
+  width: 100%;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
