--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -39,7 +39,7 @@ img {
 .container {
   text-align: center;
   padding: 0 15px;
-  min-height: 500px;
+  min-height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -199,6 +199,21 @@ h2 {
 .Modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Modal-img {
+  width: 80%;
+  border-radius: 20px;
+  box-shadow: 0px 5px 10px 5px rgba(222, 231, 238, 0.2);
+}
+
+.Modal-text {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 /*
